Criação do carrossel de imagens

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("/style/cabecalho.css");
-@import url(style/banner.css);
+@import url("style/banner.css");
+@import url("/style/carrossel.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
