--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url("/style/cabecalho.css");
 @import url("style/banner.css");
 @import url("/style/carrossel.css");
+@import url("/style/card.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
@@ -8,6 +9,8 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
+    --azul: #002F52;
+    --preto: #000000;
 }
 
 body {
