--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url("style/banner.css");
 @import url("/style/carrossel.css");
 @import url("/style/card.css");
+@import url("/style/teste.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
