terminando o layout mobile

--- a/style/banner.css
+++ b/style/banner.css
@@ -31,5 +31,5 @@
     font-weight: 400;
     text-align: center;
     background: url(/img/Pesquisa.svg) no-repeat;
-    background-position: 1em;
+    padding-left: 2em;
   }
