--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@
 @import url("style/banner.css");
 @import url("/style/carrossel.css");
 @import url("/style/card.css");
-@import url("/style/teste.css");
+@import url("/style/topicos.css");
+@import url("/style/contato.css");
+@import url("/style/rodape.css");
 
 :root {
     --cor-de-fundo: #EBECEE;
