--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@
     --branco: #FFFFFF;
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
-    --fonte-principal: "Poppins";
-    --azul: #002F52;
     --preto: #000000;
+    --azul: #002F52;
+    --cinza-claro: #858585;
+    --cinza-escuro: #474646;
+    --fonte-principal: "Poppins";
     --fonte-secundaria: "Josefin"
 }
 
