--- a/style/card.css
+++ b/style/card.css
@@ -51,3 +51,10 @@
     padding: 1em 2.2em;
 
 }
+
+@media screen and (min-width: 1024px) {
+    .card {
+        width: 50%;
+        margin: 2em auto;
+    }
+}
