--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -20,3 +20,24 @@
     position: initial;
     margin: 0.5em 0;
 }
+
+@media screen and (min-width: 1024px) {
+    .carrossel__titulo {
+        font-size: 26px;
+        padding-top: 2em;
+    }
+
+    .swiper-pagination {
+        margin: 2em 0 3em 0;
+    }
+    
+    .swiper {
+    width: 60%;
+    }
+    
+    .swiper-button-prev, .swiper-button-next {
+        display: block;
+        top: 60%;
+    }
+
+}
