--- a/style/contato.css
+++ b/style/contato.css
@@ -37,3 +37,25 @@
     padding-left: 1.5em;
     text-align: center;
 }
+
+@media screen and (min-width: 1024px) {
+    .contato {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .contato__descricao {
+        margin-right: 1em;
+        width: 30%; 
+    }
+
+    .contanto__titulo {
+        font-size: 24px;
+    }
+
+    .contato__email {
+        width: 30%;
+    }
+
+}
