--- a/style/topicos.css
+++ b/style/topicos.css
@@ -40,4 +40,16 @@
 
     }
 
+    .topicos__link:hover {
+        color: var(--laranja);
+        background-color: var(--branco);
+    }
+
+}
+
+@media screen and (min-width: 1728px) {
+    .topicos {
+        padding: 3em 25vw;
+
+    }
 }
