--- a/style/banner.css
+++ b/style/banner.css
@@ -62,3 +62,17 @@
     }
     
   }
+
+  @media screen and (min-width: 1728px) {
+        .banner__pesquisa {
+            width: 38%;
+        }
+
+        .banner__pesquisa::placeholder {
+            background-position: 12em;
+        }
+
+        .banner {
+            padding: 6em 0;
+        }
+  }
