--- a/style/card.css
+++ b/style/card.css
@@ -57,4 +57,28 @@
         width: 50%;
         margin: 2em auto;
     }
+
+    .botoes__ancora:active {
+        background-color: var(--azul);
+    }
+}
+
+@media screen and (min-width: 1728px) {
+    .descricao {
+        margin-right: 1em;
+    }
+    
+    .descricao__titulo {
+        font-size: 32px;
+        
+    }
+
+    .descricao__texto {
+        font-size: 16px;
+    }
+
+    .card {
+        width: 60%;
+        margin-left: 3em;
+    }
 }
