--- a/style/carrossel.css
+++ b/style/carrossel.css
@@ -41,3 +41,21 @@
     }
 
 }
+
+@media screen and  (min-width: 1728px){
+    .carrossel__container {
+        display: flex;
+        margin: 0 20vw 3em 20vw;
+        align-items: center;
+    }
+
+    .swiper-pagination {
+        margin: 1em 0;
+    }
+
+    .swiper {
+        width: 50%;
+       
+        }
+
+}
