--- a/style/rodape.css
+++ b/style/rodape.css
@@ -45,4 +45,19 @@ hr {
         margin: 0.6em;
     }
 
+    .lista-rodape__link:hover {
+        color: var(--laranja);
+    }
+
+}
+
+@media screen and (min-width: 1728px) {
+    .rodape {
+        padding: 3em 0;
+    }
+    
+    .lista-rodape {
+        border-left: 1px solid var(--cinza-claro);
+        padding-left: 1em;
+    }
 }
